  two digits or if sign character is present, then year is parsed as absolute.

- ZoneInfoCompiler
  Comment parsing bug disabled DST for Europe/Athens after 1980.

- GJChronology
  Range duration field of dayOfMonth was not consistent with monthOfYear. This
  bug manifested itself when adding/subtracting periods to partials.

- DateTimeParserBucket
  Fixed parsing date where format includes era. Era must be set and rounded
  before any other fields.

Enhancements since 1.0
----------------------
- YearMonthDay/TimeOfDay
  Enabled comparisons using Comparable interface
  Added compareTo/isEqual/isAfter/isBefore methods
  
- YearMonthDay/TimeOfDay
  Extra time zone constructor
  Allows current date and time to be accurately obtained

- DateTime/DateMidnight/MutableDateTime/YearMonthDay/TimeOfDay Property
  Added new method to property class - getAsString()
  Gets the value as a string, not using text values like 'Monday' or 'January'

- Period
  Added constructors to create a Period from two ReadablePartials, such as
  YearMonthDay or TimeOfDay

- PeriodType
  Added three new period types - YearMonthDay, YearWeekDay and YearDay
  These complement the existing ones but exclude the time fields.

- DateTimeFormatter
  Method withPivotYear added to allow the two digit pivot year to be controlled.
  This is most useful after creating a format from a string pattern.

- DateTimeFormatter
  Added lenient parse option to appendTwoDigitYear and appendTwoDigitWeekyear.

- Interval
  Added overlap method that returns the actual overlap between two intervals.

- IllegalFieldValueException
  Added new exception subclass of IllegalArgumentException to capture more
  context when a field is set to an illegal value. This can be helpful in
  interactive applications.

- DateTimeZone classes updated to latest data from the Olsen time zone database


Feedback
--------
All feedback is welcomed at joda-interest@lists.sourceforge.net.

The Joda team